[tool.poetry]
name = "diff-svc-infer"
version = "0.1.0"
description = "Personal diff-svc inference server"
authors = ["Dosugamea <17107514+Dosugamea@users.noreply.github.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "diff_svc_infer"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-win_amd64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.0%2Bcu117-cp310-cp310-win_amd64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu117/torchaudio-0.13.0%2Bcu117-cp310-cp310-win_amd64.whl"}
gradio = "^3.13.0"
numpy = "^1.23.5"
praat-parselmouth = "0.4.1"
pyloudnorm = "^0.1.0"
webrtcvad = "^2.0.10"
h5py = "^3.7.0"
pycwt = "^0.3.0a22"
torchmetrics = "0.5"
pytorch-lightning = "1.3.3"
torchcrepe = "^0.0.17"
scikit-image = "^0.19.3"
einops = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
